--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header div.logo {
 	width: 300px;
 	height: 60px;
 	margin-top: 20px;
-	border: 1px dashed red;
+	border: 1px dashed green;
 }
 
 header nav.menu {
